--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
       </div>
       
       <div class="row">
-        <aside class="col-2 cajaAside">
+        <aside class="col-xxl-2 col-xl-1 cajaAside">
           <div class="container">
             
           </div>
         </aside>
-        <article class="col-10 cajaArticle">        
+        <article class="col-xxl-10 col-xl-11 cajaArticle">        
           <div class="row">
-              <div class="caja4 col-12"><h1></h1></div> 
+              <div class="caja4 col-xxl-12"><h1></h1></div> 
           </div>
           <div class="cajapost col-12"><h1></h1>
             <div class="container-fluid">
               <div class="row justify-content-center">
-                <article class=" caja2 col-xxl-2 col-xl-2"> 
+                <article class=" caja2 col-xxl-4 col-xl-"> 
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2"> 
+                <article class=" caja2 col-xxl-4 col-xl-2"> 
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
-                <article class=" caja2 col-xxl-2 col-xl-2">
+                <article class=" caja2 col-xxl-4 col-xl-2">
                 </article>
               </div>
             </div>
